# Swan

./: .gitignore  README.md  build.bat  build.py  build.sh  buildConfig.py  example.config.toml  main.py  pyproject.toml  test.py  test_gui.py
src/core/: encryption.py  global_error_handler.py  location.py  location_mapping.py  platform.py  swan.py  swan_platform.py
src/gui/: main_window.py
src/gui/dialogs/: about_dialog.py  account_check_dialog.py  account_settings_dialog.py  csv_table_viewer.py  error_dialog.py  exit_dialog.py  log_viewer_dialog.py  program_settings_dialog.py
src/gui/event/: event_emitter.py  task_progress_tracker.py  task_worker.py
src/gui/resources/: resources.py  resources.qrc  resources_rc.py
src/gui/resources/strings/: sayings.json
src/gui/widgets/: starter_button.py
src/utils/: config.py  icon_loader.py  random_selector.py  stylesheet_manager.py  text.py
tests/: test.py  test_core.py  test_date.py  test_qnw.py  test_score.py
