[project]
name = "comment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "cryptography>=44.0.2",
    "datarecorder>=3.6.2",
    "drissionpage>=4.1.0.17",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyqt-toast-notification>=1.3.2",
    "pyside6>=6.8.2.1",
    "tqdm>=4.67.1",
]
